# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
#

2004-10-20 21:22:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-86

    Summary:
      Added mime types parsing
    Revision:
      missingh--head--1.0--patch-86


    modified files:
     ChangeLog libsrc/MissingH/MIMETypes.hs


2004-10-20 21:09:14 GMT	John Goerzen <jgoerzen@complete.org>	patch-85

    Summary:
      Initial mime types support
    Revision:
      missingh--head--1.0--patch-85


    new files:
     libsrc/MissingH/MIMETypes.hs
     libsrc/MissingH/Network/.arch-ids/=id

    modified files:
     ChangeLog

    new directories:
     libsrc/MissingH/Network libsrc/MissingH/Network/.arch-ids


2004-10-20 16:19:13 GMT	John Goerzen <jgoerzen@complete.org>	patch-84

    Summary:
      Added hCopy stuff
    Revision:
      missingh--head--1.0--patch-84


    new files:
     libsrc/MissingH/Network.hs

    modified files:
     ChangeLog libsrc/MissingH/IO.hs


2004-10-20 15:43:27 GMT	John Goerzen <jgoerzen@complete.org>	patch-83

    Summary:
      Added Haddock meta-tags to docs
    Revision:
      missingh--head--1.0--patch-83


    modified files:
     COPYRIGHT ChangeLog debian/copyright libsrc/MissingH/Cmd.hs
     libsrc/MissingH/IO.hs libsrc/MissingH/IO/Binary.hs
     libsrc/MissingH/List.hs libsrc/MissingH/Logging.hs
     libsrc/MissingH/Logging/Handler.hs
     libsrc/MissingH/Logging/Handler/Simple.hs
     libsrc/MissingH/Logging/Handler/Syslog.hs
     libsrc/MissingH/Logging/Logger.hs libsrc/MissingH/Str.hs
     libsrc/MissingH/Threads.hs


2004-10-20 13:56:18 GMT	John Goerzen <jgoerzen@complete.org>	patch-82

    Summary:
      Fixed up Setup.description for new modules
    Revision:
      missingh--head--1.0--patch-82


    modified files:
     ChangeLog Setup.description


2004-10-20 02:42:38 GMT	John Goerzen <jgoerzen@complete.org>	patch-81

    Summary:
      Noted new info in COPYRIGHT